--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,5 +1,4 @@
 @import url(https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i);
-@import url(https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i);
 
 
 
@@ -28,11 +27,11 @@ body {
   font-size: 6.4rem;
 }
 .display-2 {
-  font-family: 'Karla', sans-serif;
-  font-size: 3rem;
+  font-family: 'Rubik', sans-serif;
+  font-size: 2.4rem;
 }
 .display-2 > .mbr-iconfont {
-  font-size: 4.8rem;
+  font-size: 3.84rem;
 }
 .display-4 {
   font-family: 'Rubik', sans-serif;
@@ -67,9 +66,9 @@ body {
     line-height: calc( 1.4 * (2.05rem + (4 - 2.05) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-2 {
-    font-size: 2.4rem;
-    font-size: calc( 1.7rem + (3 - 1.7) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1.7rem + (3 - 1.7) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 1.92rem;
+    font-size: calc( 1.49rem + (2.4 - 1.49) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (1.49rem + (2.4 - 1.49) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-4 {
     font-size: 0.8rem;
@@ -2020,6 +2019,9 @@ body {
 .cid-qtNP1mN0NC B {
   color: #149dcc;
 }
+.cid-qtNP1mN0NC H2 {
+  color: #149dcc;
+}
 .cid-qtNTXEY5NT {
   padding-top: 45px;
   padding-bottom: 45px;
@@ -2123,5 +2125,11 @@ body {
   }
 }
 .cid-qtNTXEY5NT .foot-text B {
+  color: #149dcc;
+}
+.cid-qtNTXEY5NT .mbr-links-column B {
+  color: #149dcc;
+}
+.cid-qtNTXEY5NT .foot-title {
   color: #149dcc;
 }
