--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1791,7 +1791,7 @@ body {
 .cid-qtNP1mN0NC {
   padding-top: 60px;
   padding-bottom: 60px;
-  background-color: #f9f9f9;
+  background-color: #ffffff;
 }
 .cid-qtNP1mN0NC p {
   color: #767676;
@@ -1848,10 +1848,16 @@ body {
   }
 }
 .cid-qtNP1mN0NC B {
-  color: #149dcc;
+  color: #55b4d4;
 }
 .cid-qtNP1mN0NC H2 {
-  color: #55b4d4;
+  color: #232323;
+}
+.cid-qtNP1mN0NC H4 {
+  color: #232323;
+}
+.cid-qtNP1mN0NC .panel-text {
+  color: #232323;
 }
 .cid-qu3kbk5agp {
   padding-top: 45px;
@@ -1882,7 +1888,7 @@ body {
   font-size: 55px;
   word-spacing: 0;
   line-height: 1.3;
-  color: #ffffff;
+  color: #cccccc;
 }
 .cid-qu3kbk5agp .period {
   display: block;
@@ -1904,7 +1910,7 @@ body {
   text-transform: none;
   letter-spacing: 0;
   word-spacing: 0;
-  color: #ffffff;
+  color: #cccccc;
 }
 .cid-qu3kbk5agp .countdown-cont {
   background: linear-gradient(45deg, #232323, #0f7699);
