create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2114,36 +2114,36 @@ body {
 .cid-quysSBFA1J .mbr-section-btn {
   color: #232323;
 }
-.cid-quytII2Vy8 {
+.cid-quzlo2d7iR {
   padding-top: 90px;
   padding-bottom: 90px;
   background-color: #ffffff;
   background: linear-gradient(45deg, #ffffff, #ffffff);
 }
 @media (min-width: 992px) {
-  .cid-quytII2Vy8 .mbr-figure {
+  .cid-quzlo2d7iR .mbr-figure {
     padding-right: 4rem;
   }
 }
 @media (max-width: 991px) {
-  .cid-quytII2Vy8 .mbr-figure {
+  .cid-quzlo2d7iR .mbr-figure {
     padding-bottom: 3rem;
   }
 }
 @media (max-width: 767px) {
-  .cid-quytII2Vy8 .mbr-text {
+  .cid-quzlo2d7iR .mbr-text {
     text-align: center;
   }
 }
-.cid-quytII2Vy8 .mbr-text,
-.cid-quytII2Vy8 .mbr-section-btn {
-  color: #232323;
-}
-.cid-quytII2Vy8 H1 {
+.cid-quzlo2d7iR H1 {
   color: #55b4d4;
 }
-.cid-quytII2Vy8 H3 {
+.cid-quzlo2d7iR .mbr-text,
+.cid-quzlo2d7iR .mbr-section-btn {
   color: #232323;
+}
+.cid-quzlo2d7iR H3 {
+  color: #073b4c;
 }
 .cid-qtNWheQD9m {
   background-image: url("../../../assets/images/5117897-wallpaper-services-1920x1080.jpg");
