create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1959,7 +1959,7 @@ body {
   color: #ffffff;
 }
 .cid-qusjA34Vpo B {
-  color: #ffffff;
+  color: #55b4d4;
 }
 .cid-qtNVgSNArh {
   padding-top: 60px;
@@ -2016,7 +2016,7 @@ body {
 .cid-qugW0dBC10 {
   padding-top: 60px;
   padding-bottom: 60px;
-  background-image: url("../../../assets/images/webdes4-1667x1667.jpg");
+  background-image: url("../../../assets/images/16-5671349b8e7335.60584957-1920x1080.jpg");
 }
 .cid-qugW0dBC10 .mbr-section-text {
   color: #ffffff;
@@ -2076,7 +2076,7 @@ body {
   color: #55b4d4;
 }
 .cid-qugW0dBC10 H4 {
-  color: #ffffff;
+  color: #55b4d4;
 }
 .cid-qugW0dBC10 B {
   color: #55b4d4;
@@ -2087,8 +2087,6 @@ body {
   background-color: #073b4c;
 }
 .cid-quysSBFA1J {
-  padding-top: 90px;
-  padding-bottom: 90px;
   background-color: #fbfbfb;
   background: linear-gradient(45deg, #fbfbfb, #ffffff);
 }
@@ -2115,8 +2113,6 @@ body {
   color: #232323;
 }
 .cid-quzlo2d7iR {
-  padding-top: 90px;
-  padding-bottom: 90px;
   background-color: #ffffff;
   background: linear-gradient(45deg, #ffffff, #ffffff);
 }
