--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3303,6 +3303,11 @@ body {
     flex-shrink: 0;
   }
 }
+.cid-quQVukzAlv {
+  padding-top: 120px;
+  padding-bottom: 120px;
+  background-image: url("../../../assets/images/sarasota-web-design-blog-creative-heads-1800x1205.jpg");
+}
 .cid-quh0l1vkJ8 {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -3311,4 +3316,118 @@ body {
 .cid-quh0l1vkJ8 .mbr-text,
 .cid-quh0l1vkJ8 blockquote {
   color: #767676;
+}
+.cid-quQVdz0ta0 {
+  padding-top: 45px;
+  padding-bottom: 45px;
+  background-color: #2e2e2e;
+}
+@media (max-width: 767px) {
+  .cid-quQVdz0ta0 .content {
+    text-align: center;
+  }
+  .cid-quQVdz0ta0 .content > div:not(:last-child) {
+    margin-bottom: 2rem;
+  }
+}
+.cid-quQVdz0ta0 .img-logo img {
+  height: 6rem;
+}
+.cid-quQVdz0ta0 [type="email"] {
+  font-size: .75rem;
+  margin-bottom: 5px;
+  text-align: center;
+  min-width: 150px;
+}
+.cid-quQVdz0ta0 .input-group-btn {
+  display: inline-block;
+}
+.cid-quQVdz0ta0 .input-group-btn a.btn {
+  margin: 0 !important;
+}
+.cid-quQVdz0ta0 .input-group {
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.cid-quQVdz0ta0 [type="submit"] {
+  padding: .75rem 1.5625rem !important;
+  margin-left: .625rem;
+  text-transform: none;
+}
+.cid-quQVdz0ta0 .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+}
+.cid-quQVdz0ta0 .social-list .mbr-iconfont-social {
+  font-size: 1.3rem;
+  color: #fff;
+}
+.cid-quQVdz0ta0 .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-quQVdz0ta0 .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-quQVdz0ta0 .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-quQVdz0ta0 .social-list {
+    justify-content: center;
+    -webkit-justify-content: center;
+  }
+}
+@media (max-width: 767px) {
+  .cid-quQVdz0ta0 .footer-lower .copyright {
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+}
+.cid-quQVdz0ta0 .footer-lower hr {
+  margin: 1rem 0;
+  border-color: #fff;
+  opacity: .05;
+}
+.cid-quQVdz0ta0 form .input-group input.form-control,
+.cid-quQVdz0ta0 form .input-group-btn .btn {
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px;
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 3px;
+}
+.cid-quQVdz0ta0 .form-inline {
+  justify-content: center;
+}
+.cid-quQVdz0ta0 .form-group {
+  margin: 0;
+}
+@media (max-width: 767px) {
+  .cid-quQVdz0ta0 .foot-logo {
+    text-align: center !important;
+  }
+  .cid-quQVdz0ta0 .foot-title {
+    text-align: center !important;
+  }
+  .cid-quQVdz0ta0 .mbr-text {
+    text-align: center !important;
+  }
+}
+.cid-quQVdz0ta0 .foot-logo B {
+  color: #55b4d4;
+}
+.cid-quQVdz0ta0 .foot-title {
+  color: #55b4d4;
+}
+.cid-quQVdz0ta0 .copyright > p B {
+  color: #55b4d4;
+}
+.cid-quQVdz0ta0 .mbr-links-column B {
+  color: #55b4d4;
 }
