--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2060,7 +2060,7 @@ body {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #073b4c;
+  background-color: #ffffff;
 }
 .cid-quVqFNkZe8 button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -4222,6 +4222,340 @@ body {
 }
 .cid-quWDALijuv .mbr-text {
   color: #767676;
+}
+.cid-qv1nnEhSEr {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #55b4d4;
+  background: linear-gradient(#55b4d4, #efefef);
+}
+.cid-qv1nnEhSEr .carousel-control {
+  background: #000;
+}
+.cid-qv1nnEhSEr .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-qv1nnEhSEr .carousel-item {
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-qv1nnEhSEr .carousel-item .media-container-row {
+  -webkit-flex-grow: 1;
+  flex-grow: 1;
+}
+.cid-qv1nnEhSEr .carousel-item .wrap-img {
+  text-align: center;
+}
+.cid-qv1nnEhSEr .carousel-item .wrap-img img {
+  max-height: 150px;
+  width: auto;
+  max-width: 100%;
+}
+.cid-qv1nnEhSEr .carousel-controls {
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-qv1nnEhSEr .carousel-controls .carousel-control {
+  background: #000;
+  border-radius: 50%;
+  position: static;
+  width: 40px;
+  height: 40px;
+  margin-top: 2rem;
+  border-width: 1px;
+}
+.cid-qv1nnEhSEr .carousel-controls .carousel-control.carousel-control-prev {
+  left: auto;
+  margin-right: 20px;
+  margin-left: 0;
+}
+.cid-qv1nnEhSEr .carousel-controls .carousel-control.carousel-control-next {
+  right: auto;
+  margin-right: 0;
+}
+.cid-qv1nnEhSEr .carousel-controls .carousel-control .mbr-iconfont {
+  font-size: 1rem;
+}
+.cid-qv1nnEhSEr .cloneditem-1,
+.cid-qv1nnEhSEr .cloneditem-2,
+.cid-qv1nnEhSEr .cloneditem-3,
+.cid-qv1nnEhSEr .cloneditem-4,
+.cid-qv1nnEhSEr .cloneditem-5 {
+  display: none;
+}
+.cid-qv1nnEhSEr .col-lg-15 {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 100%;
+  -webkit-flex: 0 0 100%;
+  flex: 0 0 100%;
+  max-width: 100%;
+  position: relative;
+  min-height: 1px;
+  padding-right: 10px;
+  padding-left: 10px;
+  width: 100%;
+}
+@media (min-width: 992px) {
+  .cid-qv1nnEhSEr .col-lg-15 {
+    -ms-flex: 0 0 20%;
+    -webkit-flex: 0 0 20%;
+    flex: 0 0 20%;
+    max-width: 20%;
+    width: 20%;
+  }
+  .cid-qv1nnEhSEr .carousel-inner.slides2 > .carousel-item.active.carousel-item-right,
+  .cid-qv1nnEhSEr .carousel-inner.slides2 > .carousel-item.carousel-item-next {
+    left: 0;
+    -webkit-transform: translate3d(50%, 0, 0);
+    transform: translate3d(50%, 0, 0);
+  }
+  .cid-qv1nnEhSEr .carousel-inner.slides2 > .carousel-item.active.carousel-item-left,
+  .cid-qv1nnEhSEr .carousel-inner.slides2 > .carousel-item.carousel-item-prev {
+    left: 0;
+    -webkit-transform: translate3d(-50%, 0, 0);
+    transform: translate3d(-50%, 0, 0);
+  }
+  .cid-qv1nnEhSEr .carousel-inner.slides2 > .carousel-item.carousel-item-left,
+  .cid-qv1nnEhSEr .carousel-inner.slides2 > .carousel-item.carousel-item-prev.carousel-item-right,
+  .cid-qv1nnEhSEr .carousel-inner.slides2 > .carousel-item.active {
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  .cid-qv1nnEhSEr .carousel-inner.slides2 .cloneditem-1,
+  .cid-qv1nnEhSEr .carousel-inner.slides2 .cloneditem-2,
+  .cid-qv1nnEhSEr .carousel-inner.slides2 .cloneditem-3 {
+    display: block;
+  }
+  .cid-qv1nnEhSEr .carousel-inner.slides3 > .carousel-item.active.carousel-item-right,
+  .cid-qv1nnEhSEr .carousel-inner.slides3 > .carousel-item.carousel-item-next {
+    left: 0;
+    -webkit-transform: translate3d(33.333333%, 0, 0);
+    transform: translate3d(33.333333%, 0, 0);
+  }
+  .cid-qv1nnEhSEr .carousel-inner.slides3 > .carousel-item.active.carousel-item-left,
+  .cid-qv1nnEhSEr .carousel-inner.slides3 > .carousel-item.carousel-item-prev {
+    left: 0;
+    -webkit-transform: translate3d(-33.333333%, 0, 0);
+    transform: translate3d(-33.333333%, 0, 0);
+  }
+  .cid-qv1nnEhSEr .carousel-inner.slides3 > .carousel-item.carousel-item-left,
+  .cid-qv1nnEhSEr .carousel-inner.slides3 > .carousel-item.carousel-item-prev.carousel-item-right,
+  .cid-qv1nnEhSEr .carousel-inner.slides3 > .carousel-item.active {
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  .cid-qv1nnEhSEr .carousel-inner.slides3 .cloneditem-1,
+  .cid-qv1nnEhSEr .carousel-inner.slides3 .cloneditem-2,
+  .cid-qv1nnEhSEr .carousel-inner.slides3 .cloneditem-3 {
+    display: block;
+  }
+  .cid-qv1nnEhSEr .carousel-inner.slides4 > .carousel-item.active.carousel-item-right,
+  .cid-qv1nnEhSEr .carousel-inner.slides4 > .carousel-item.carousel-item-next {
+    left: 0;
+    -webkit-transform: translate3d(25%, 0, 0);
+    transform: translate3d(25%, 0, 0);
+  }
+  .cid-qv1nnEhSEr .carousel-inner.slides4 > .carousel-item.active.carousel-item-left,
+  .cid-qv1nnEhSEr .carousel-inner.slides4 > .carousel-item.carousel-item-prev {
+    left: 0;
+    -webkit-transform: translate3d(-25%, 0, 0);
+    transform: translate3d(-25%, 0, 0);
+  }
+  .cid-qv1nnEhSEr .carousel-inner.slides4 > .carousel-item.carousel-item-left,
+  .cid-qv1nnEhSEr .carousel-inner.slides4 > .carousel-item.carousel-item-prev.carousel-item-right,
+  .cid-qv1nnEhSEr .carousel-inner.slides4 > .carousel-item.active {
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  .cid-qv1nnEhSEr .carousel-inner.slides4 .cloneditem-1,
+  .cid-qv1nnEhSEr .carousel-inner.slides4 .cloneditem-2,
+  .cid-qv1nnEhSEr .carousel-inner.slides4 .cloneditem-3 {
+    display: block;
+  }
+  .cid-qv1nnEhSEr .carousel-inner.slides5 > .carousel-item.active.carousel-item-right,
+  .cid-qv1nnEhSEr .carousel-inner.slides5 > .carousel-item.carousel-item-next {
+    left: 0;
+    -webkit-transform: translate3d(20%, 0, 0);
+    transform: translate3d(20%, 0, 0);
+  }
+  .cid-qv1nnEhSEr .carousel-inner.slides5 > .carousel-item.active.carousel-item-left,
+  .cid-qv1nnEhSEr .carousel-inner.slides5 > .carousel-item.carousel-item-prev {
+    left: 0;
+    -webkit-transform: translate3d(-20%, 0, 0);
+    transform: translate3d(-20%, 0, 0);
+  }
+  .cid-qv1nnEhSEr .carousel-inner.slides5 > .carousel-item.carousel-item-left,
+  .cid-qv1nnEhSEr .carousel-inner.slides5 > .carousel-item.carousel-item-prev.carousel-item-right,
+  .cid-qv1nnEhSEr .carousel-inner.slides5 > .carousel-item.active {
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  .cid-qv1nnEhSEr .carousel-inner.slides5 .cloneditem-1,
+  .cid-qv1nnEhSEr .carousel-inner.slides5 .cloneditem-2,
+  .cid-qv1nnEhSEr .carousel-inner.slides5 .cloneditem-3,
+  .cid-qv1nnEhSEr .carousel-inner.slides5 .cloneditem-4 {
+    display: block;
+  }
+  .cid-qv1nnEhSEr .carousel-inner.slides6 > .carousel-item.active.carousel-item-right,
+  .cid-qv1nnEhSEr .carousel-inner.slides6 > .carousel-item.carousel-item-next {
+    left: 0;
+    -webkit-transform: translate3d(16.666667%, 0, 0);
+    transform: translate3d(16.666667%, 0, 0);
+  }
+  .cid-qv1nnEhSEr .carousel-inner.slides6 > .carousel-item.active.carousel-item-left,
+  .cid-qv1nnEhSEr .carousel-inner.slides6 > .carousel-item.carousel-item-prev {
+    left: 0;
+    -webkit-transform: translate3d(-16.666667%, 0, 0);
+    transform: translate3d(-16.666667%, 0, 0);
+  }
+  .cid-qv1nnEhSEr .carousel-inner.slides6 > .carousel-item.carousel-item-left,
+  .cid-qv1nnEhSEr .carousel-inner.slides6 > .carousel-item.carousel-item-prev.carousel-item-right,
+  .cid-qv1nnEhSEr .carousel-inner.slides6 > .carousel-item.active {
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  .cid-qv1nnEhSEr .carousel-inner.slides6 .cloneditem-1,
+  .cid-qv1nnEhSEr .carousel-inner.slides6 .cloneditem-2,
+  .cid-qv1nnEhSEr .carousel-inner.slides6 .cloneditem-3,
+  .cid-qv1nnEhSEr .carousel-inner.slides6 .cloneditem-4,
+  .cid-qv1nnEhSEr .carousel-inner.slides6 .cloneditem-5 {
+    display: block;
+  }
+}
+.cid-qv1kvVjQzf {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-qv1kvVjQzf .card-img a {
+  display: block;
+  padding-top: 2rem;
+}
+.cid-qv1kvVjQzf .card-box {
+  padding: 0 2rem;
+}
+.cid-qv1kvVjQzf .mbr-section-btn {
+  padding-top: 1rem;
+}
+.cid-qv1kvVjQzf .mbr-section-btn a {
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
+.cid-qv1kvVjQzf h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 2rem;
+}
+.cid-qv1kvVjQzf p {
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 1.5rem;
+}
+.cid-qv1kvVjQzf .mbr-text {
+  color: #767676;
+}
+.cid-qv1kvVjQzf .card-wrapper {
+  padding-bottom: 2rem;
+  background: #ffffff;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-qv1kvVjQzf .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
+}
+.cid-qv1f4fKptP {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-qv1f4fKptP .card-img a {
+  display: block;
+  padding-top: 2rem;
+}
+.cid-qv1f4fKptP .card-box {
+  padding: 0 2rem;
+}
+.cid-qv1f4fKptP .mbr-section-btn {
+  padding-top: 1rem;
+}
+.cid-qv1f4fKptP .mbr-section-btn a {
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
+.cid-qv1f4fKptP h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 2rem;
+}
+.cid-qv1f4fKptP p {
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 1.5rem;
+}
+.cid-qv1f4fKptP .mbr-text {
+  color: #767676;
+}
+.cid-qv1f4fKptP .card-wrapper {
+  padding-bottom: 2rem;
+  background: #ffffff;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-qv1f4fKptP .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
+}
+.cid-qv1hfrEbu1 {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-qv1hfrEbu1 .card-img a {
+  display: block;
+  padding-top: 2rem;
+}
+.cid-qv1hfrEbu1 .card-box {
+  padding: 0 2rem;
+}
+.cid-qv1hfrEbu1 .mbr-section-btn {
+  padding-top: 1rem;
+}
+.cid-qv1hfrEbu1 .mbr-section-btn a {
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
+.cid-qv1hfrEbu1 h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 2rem;
+}
+.cid-qv1hfrEbu1 p {
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 1.5rem;
+}
+.cid-qv1hfrEbu1 .mbr-text {
+  color: #767676;
+}
+.cid-qv1hfrEbu1 .card-wrapper {
+  padding-bottom: 2rem;
+  background: #ffffff;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-qv1hfrEbu1 .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
 }
 .cid-quWAJ1zmMf {
   background-image: url("../../../assets/images/developer-keyboard-1920x10801.jpg");
