create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3418,12 +3418,12 @@ body {
 }
 .cid-quVqFNkZe8 .navbar {
   padding: .5rem 0;
-  background: #073b4c;
+  background: #232323;
   transition: none;
   min-height: 77px;
 }
 .cid-quVqFNkZe8 .navbar-dropdown.bg-color.transparent.opened {
-  background: #073b4c;
+  background: #232323;
 }
 .cid-quVqFNkZe8 a {
   font-style: normal;
@@ -3501,7 +3501,7 @@ body {
   padding-bottom: 0;
 }
 .cid-quVqFNkZe8 .dropdown .dropdown-menu {
-  background: #073b4c;
+  background: #232323;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -3572,7 +3572,7 @@ body {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #073b4c;
+  background-color: #ffffff;
 }
 .cid-quVqFNkZe8 button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -4384,7 +4384,7 @@ body {
 }
 .cid-qv7LFxnvws {
   padding-top: 60px;
-  padding-bottom: 60px;
+  padding-bottom: 0px;
   background-color: #55b4d4;
 }
 .cid-qv7LFxnvws .mbr-section-subtitle {
@@ -4393,221 +4393,40 @@ body {
 .cid-qv7LFxnvws H2 {
   color: #073b4c;
 }
-.cid-quWDqtHO0A {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-image: url("../../../assets/images/engineeringiot-listical.gif");
+.cid-qvd6GGsPWh {
+  padding-top: 60px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
 }
-@media (min-width: 992px) {
-  .cid-quWDqtHO0A .mbr-figure {
-    padding-right: 4rem;
+.cid-qvd6GGsPWh .line {
+  background-color: #55b4d4;
+  color: #55b4d4;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-qvd6GGsPWh .section-text {
+  padding: 2rem 0;
+}
+.cid-qvd6GGsPWh .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-qvd6GGsPWh .inner-container {
+    width: 100% !important;
   }
 }
-@media (max-width: 991px) {
-  .cid-quWDqtHO0A .mbr-figure {
-    padding-bottom: 3rem;
-  }
+.cid-qvd5rm04op {
+  padding-top: 60px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
 }
-@media (max-width: 767px) {
-  .cid-quWDqtHO0A .mbr-text {
-    text-align: center;
-  }
-}
-.cid-quWDqtHO0A .mbr-text,
-.cid-quWDqtHO0A .mbr-section-btn {
+.cid-qvd5rm04op .mbr-section-subtitle {
+  color: #767676;
   text-align: left;
-  color: #073b4c;
-}
-.cid-quWDqtHO0A H1 {
-  color: #0f7699;
-}
-.cid-qv7ednlJeU {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #0f7699;
-  background: linear-gradient(45deg, #0f7699, #073b4c);
-}
-@media (min-width: 992px) {
-  .cid-qv7ednlJeU .mbr-figure {
-    padding-right: 4rem;
-  }
-}
-@media (max-width: 991px) {
-  .cid-qv7ednlJeU .mbr-figure {
-    padding-bottom: 3rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-qv7ednlJeU .mbr-text {
-    text-align: center;
-  }
-}
-.cid-qv7fqZMqRd {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-image: url("../../../assets/images/-.gif");
-}
-@media (min-width: 992px) {
-  .cid-qv7fqZMqRd .mbr-figure {
-    padding-right: 4rem;
-  }
-}
-@media (max-width: 991px) {
-  .cid-qv7fqZMqRd .mbr-figure {
-    padding-bottom: 3rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-qv7fqZMqRd .mbr-text {
-    text-align: center;
-  }
-}
-.cid-qv7fqZMqRd .mbr-text,
-.cid-qv7fqZMqRd .mbr-section-btn {
-  color: #232323;
-}
-.cid-qv7fqZMqRd H1 {
-  color: #232323;
-}
-.cid-qv7frtw3Tx {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #0f7699;
-  background: linear-gradient(45deg, #0f7699, #073b4c);
-}
-@media (min-width: 992px) {
-  .cid-qv7frtw3Tx .mbr-figure {
-    padding-right: 4rem;
-  }
-}
-@media (max-width: 991px) {
-  .cid-qv7frtw3Tx .mbr-figure {
-    padding-bottom: 3rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-qv7frtw3Tx .mbr-text {
-    text-align: center;
-  }
-}
-.cid-qv7frTVouE {
-  padding-top: 45px;
-  padding-bottom: 120px;
-  background-image: url("../../../assets/images/blog-coupons-test-success2x.gif");
-}
-@media (min-width: 992px) {
-  .cid-qv7frTVouE .mbr-figure {
-    padding-right: 4rem;
-  }
-}
-@media (max-width: 991px) {
-  .cid-qv7frTVouE .mbr-figure {
-    padding-bottom: 3rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-qv7frTVouE .mbr-text {
-    text-align: center;
-  }
-}
-.cid-qv7frTVouE H1 {
-  color: #073b4c;
-}
-.cid-qv7frTVouE .mbr-text,
-.cid-qv7frTVouE .mbr-section-btn {
-  color: #232323;
-}
-.cid-qv7fskj1TG {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #0f7699;
-  background: linear-gradient(45deg, #0f7699, #073b4c);
-}
-@media (min-width: 992px) {
-  .cid-qv7fskj1TG .mbr-figure {
-    padding-right: 4rem;
-  }
-}
-@media (max-width: 991px) {
-  .cid-qv7fskj1TG .mbr-figure {
-    padding-bottom: 3rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-qv7fskj1TG .mbr-text {
-    text-align: center;
-  }
-}
-.cid-qv7fsO7KBo {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-image: url("../../../assets/images/635890855091031361-483586569-languages-2000x1499.jpg");
-}
-@media (min-width: 992px) {
-  .cid-qv7fsO7KBo .mbr-figure {
-    padding-right: 4rem;
-  }
-}
-@media (max-width: 991px) {
-  .cid-qv7fsO7KBo .mbr-figure {
-    padding-bottom: 3rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-qv7fsO7KBo .mbr-text {
-    text-align: center;
-  }
-}
-.cid-qv7fsO7KBo H1 {
-  color: #073b4c;
-}
-.cid-qv7fsO7KBo .mbr-text,
-.cid-qv7fsO7KBo .mbr-section-btn {
-  color: #232323;
-}
-.cid-qv7fE1Rwq6 {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #0f7699;
-  background: linear-gradient(45deg, #0f7699, #073b4c);
-}
-@media (min-width: 992px) {
-  .cid-qv7fE1Rwq6 .mbr-figure {
-    padding-right: 4rem;
-  }
-}
-@media (max-width: 991px) {
-  .cid-qv7fE1Rwq6 .mbr-figure {
-    padding-bottom: 3rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-qv7fE1Rwq6 .mbr-text {
-    text-align: center;
-  }
-}
-.cid-qv7uXGTwyJ {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-image: url("../../../assets/images/background4.jpg");
-}
-@media (min-width: 992px) {
-  .cid-qv7uXGTwyJ .mbr-figure {
-    padding-right: 4rem;
-  }
-}
-@media (max-width: 991px) {
-  .cid-qv7uXGTwyJ .mbr-figure {
-    padding-bottom: 3rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-qv7uXGTwyJ .mbr-text {
-    text-align: center;
-  }
 }
 .cid-qv1kvVjQzf {
-  padding-top: 90px;
+  padding-top: 0px;
   padding-bottom: 90px;
   background-color: #ffffff;
 }
@@ -4649,8 +4468,40 @@ body {
   box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
   transition: box-shadow 0.3s;
 }
+.cid-qvd6qqQGSY {
+  padding-top: 15px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-qvd6qqQGSY .line {
+  background-color: #55b4d4;
+  color: #55b4d4;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-qvd6qqQGSY .section-text {
+  padding: 2rem 0;
+}
+.cid-qvd6qqQGSY .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-qvd6qqQGSY .inner-container {
+    width: 100% !important;
+  }
+}
+.cid-qvd5hUZHzS {
+  padding-top: 60px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-qvd5hUZHzS .mbr-section-subtitle {
+  color: #767676;
+  text-align: left;
+}
 .cid-qv1f4fKptP {
-  padding-top: 90px;
+  padding-top: 0px;
   padding-bottom: 90px;
   background-color: #ffffff;
 }
