--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4503,7 +4503,7 @@ body {
 .cid-qv1f4fKptP {
   padding-top: 0px;
   padding-bottom: 90px;
-  background-color: #ffffff;
+  background-color: #efefef;
 }
 .cid-qv1f4fKptP .card-img a {
   display: block;
@@ -4540,49 +4540,6 @@ body {
   transition: box-shadow 0.3s;
 }
 .cid-qv1f4fKptP .card-wrapper:hover {
-  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
-  transition: box-shadow 0.3s;
-}
-.cid-qv1hfrEbu1 {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #ffffff;
-}
-.cid-qv1hfrEbu1 .card-img a {
-  display: block;
-  padding-top: 2rem;
-}
-.cid-qv1hfrEbu1 .card-box {
-  padding: 0 2rem;
-}
-.cid-qv1hfrEbu1 .mbr-section-btn {
-  padding-top: 1rem;
-}
-.cid-qv1hfrEbu1 .mbr-section-btn a {
-  margin-top: 1rem;
-  margin-bottom: 0;
-}
-.cid-qv1hfrEbu1 h4 {
-  font-weight: 500;
-  margin-bottom: 0;
-  text-align: left;
-  padding-top: 2rem;
-}
-.cid-qv1hfrEbu1 p {
-  margin-bottom: 0;
-  text-align: left;
-  padding-top: 1.5rem;
-}
-.cid-qv1hfrEbu1 .mbr-text {
-  color: #767676;
-}
-.cid-qv1hfrEbu1 .card-wrapper {
-  padding-bottom: 2rem;
-  background: #ffffff;
-  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
-  transition: box-shadow 0.3s;
-}
-.cid-qv1hfrEbu1 .card-wrapper:hover {
   box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
   transition: box-shadow 0.3s;
 }
