--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3784,6 +3784,579 @@ body {
     flex-shrink: 0;
   }
 }
+.cid-qviUgcAkJG {
+  padding-top: 120px;
+  padding-bottom: 30px;
+  background: linear-gradient(45deg, #073b4c, #073b4c);
+}
+.cid-qviUgcAkJG .mbr-section-subtitle {
+  font-style: italic;
+  letter-spacing: 1rem;
+}
+.cid-qviUgcAkJG .mbr-section-title,
+.cid-qviUgcAkJG .mbr-section-btn {
+  color: #55b4d4;
+}
+.cid-qviUv4STiT {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #073b4c;
+  background: linear-gradient(#073b4c, #55b4d4);
+}
+.cid-qviUv4STiT .carousel-control {
+  background: #000;
+}
+.cid-qviUv4STiT .mbr-section-subtitle {
+  color: #cccccc;
+}
+.cid-qviUv4STiT .carousel-item {
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-qviUv4STiT .carousel-item .media-container-row {
+  -webkit-flex-grow: 1;
+  flex-grow: 1;
+}
+.cid-qviUv4STiT .carousel-item .wrap-img {
+  text-align: center;
+}
+.cid-qviUv4STiT .carousel-item .wrap-img img {
+  max-height: 150px;
+  width: auto;
+  max-width: 100%;
+}
+.cid-qviUv4STiT .carousel-controls {
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-qviUv4STiT .carousel-controls .carousel-control {
+  background: #000;
+  border-radius: 50%;
+  position: static;
+  width: 40px;
+  height: 40px;
+  margin-top: 2rem;
+  border-width: 1px;
+}
+.cid-qviUv4STiT .carousel-controls .carousel-control.carousel-control-prev {
+  left: auto;
+  margin-right: 20px;
+  margin-left: 0;
+}
+.cid-qviUv4STiT .carousel-controls .carousel-control.carousel-control-next {
+  right: auto;
+  margin-right: 0;
+}
+.cid-qviUv4STiT .carousel-controls .carousel-control .mbr-iconfont {
+  font-size: 1rem;
+}
+.cid-qviUv4STiT .cloneditem-1,
+.cid-qviUv4STiT .cloneditem-2,
+.cid-qviUv4STiT .cloneditem-3,
+.cid-qviUv4STiT .cloneditem-4,
+.cid-qviUv4STiT .cloneditem-5 {
+  display: none;
+}
+.cid-qviUv4STiT .col-lg-15 {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 100%;
+  -webkit-flex: 0 0 100%;
+  flex: 0 0 100%;
+  max-width: 100%;
+  position: relative;
+  min-height: 1px;
+  padding-right: 10px;
+  padding-left: 10px;
+  width: 100%;
+}
+@media (min-width: 992px) {
+  .cid-qviUv4STiT .col-lg-15 {
+    -ms-flex: 0 0 20%;
+    -webkit-flex: 0 0 20%;
+    flex: 0 0 20%;
+    max-width: 20%;
+    width: 20%;
+  }
+  .cid-qviUv4STiT .carousel-inner.slides2 > .carousel-item.active.carousel-item-right,
+  .cid-qviUv4STiT .carousel-inner.slides2 > .carousel-item.carousel-item-next {
+    left: 0;
+    -webkit-transform: translate3d(50%, 0, 0);
+    transform: translate3d(50%, 0, 0);
+  }
+  .cid-qviUv4STiT .carousel-inner.slides2 > .carousel-item.active.carousel-item-left,
+  .cid-qviUv4STiT .carousel-inner.slides2 > .carousel-item.carousel-item-prev {
+    left: 0;
+    -webkit-transform: translate3d(-50%, 0, 0);
+    transform: translate3d(-50%, 0, 0);
+  }
+  .cid-qviUv4STiT .carousel-inner.slides2 > .carousel-item.carousel-item-left,
+  .cid-qviUv4STiT .carousel-inner.slides2 > .carousel-item.carousel-item-prev.carousel-item-right,
+  .cid-qviUv4STiT .carousel-inner.slides2 > .carousel-item.active {
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  .cid-qviUv4STiT .carousel-inner.slides2 .cloneditem-1,
+  .cid-qviUv4STiT .carousel-inner.slides2 .cloneditem-2,
+  .cid-qviUv4STiT .carousel-inner.slides2 .cloneditem-3 {
+    display: block;
+  }
+  .cid-qviUv4STiT .carousel-inner.slides3 > .carousel-item.active.carousel-item-right,
+  .cid-qviUv4STiT .carousel-inner.slides3 > .carousel-item.carousel-item-next {
+    left: 0;
+    -webkit-transform: translate3d(33.333333%, 0, 0);
+    transform: translate3d(33.333333%, 0, 0);
+  }
+  .cid-qviUv4STiT .carousel-inner.slides3 > .carousel-item.active.carousel-item-left,
+  .cid-qviUv4STiT .carousel-inner.slides3 > .carousel-item.carousel-item-prev {
+    left: 0;
+    -webkit-transform: translate3d(-33.333333%, 0, 0);
+    transform: translate3d(-33.333333%, 0, 0);
+  }
+  .cid-qviUv4STiT .carousel-inner.slides3 > .carousel-item.carousel-item-left,
+  .cid-qviUv4STiT .carousel-inner.slides3 > .carousel-item.carousel-item-prev.carousel-item-right,
+  .cid-qviUv4STiT .carousel-inner.slides3 > .carousel-item.active {
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  .cid-qviUv4STiT .carousel-inner.slides3 .cloneditem-1,
+  .cid-qviUv4STiT .carousel-inner.slides3 .cloneditem-2,
+  .cid-qviUv4STiT .carousel-inner.slides3 .cloneditem-3 {
+    display: block;
+  }
+  .cid-qviUv4STiT .carousel-inner.slides4 > .carousel-item.active.carousel-item-right,
+  .cid-qviUv4STiT .carousel-inner.slides4 > .carousel-item.carousel-item-next {
+    left: 0;
+    -webkit-transform: translate3d(25%, 0, 0);
+    transform: translate3d(25%, 0, 0);
+  }
+  .cid-qviUv4STiT .carousel-inner.slides4 > .carousel-item.active.carousel-item-left,
+  .cid-qviUv4STiT .carousel-inner.slides4 > .carousel-item.carousel-item-prev {
+    left: 0;
+    -webkit-transform: translate3d(-25%, 0, 0);
+    transform: translate3d(-25%, 0, 0);
+  }
+  .cid-qviUv4STiT .carousel-inner.slides4 > .carousel-item.carousel-item-left,
+  .cid-qviUv4STiT .carousel-inner.slides4 > .carousel-item.carousel-item-prev.carousel-item-right,
+  .cid-qviUv4STiT .carousel-inner.slides4 > .carousel-item.active {
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  .cid-qviUv4STiT .carousel-inner.slides4 .cloneditem-1,
+  .cid-qviUv4STiT .carousel-inner.slides4 .cloneditem-2,
+  .cid-qviUv4STiT .carousel-inner.slides4 .cloneditem-3 {
+    display: block;
+  }
+  .cid-qviUv4STiT .carousel-inner.slides5 > .carousel-item.active.carousel-item-right,
+  .cid-qviUv4STiT .carousel-inner.slides5 > .carousel-item.carousel-item-next {
+    left: 0;
+    -webkit-transform: translate3d(20%, 0, 0);
+    transform: translate3d(20%, 0, 0);
+  }
+  .cid-qviUv4STiT .carousel-inner.slides5 > .carousel-item.active.carousel-item-left,
+  .cid-qviUv4STiT .carousel-inner.slides5 > .carousel-item.carousel-item-prev {
+    left: 0;
+    -webkit-transform: translate3d(-20%, 0, 0);
+    transform: translate3d(-20%, 0, 0);
+  }
+  .cid-qviUv4STiT .carousel-inner.slides5 > .carousel-item.carousel-item-left,
+  .cid-qviUv4STiT .carousel-inner.slides5 > .carousel-item.carousel-item-prev.carousel-item-right,
+  .cid-qviUv4STiT .carousel-inner.slides5 > .carousel-item.active {
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  .cid-qviUv4STiT .carousel-inner.slides5 .cloneditem-1,
+  .cid-qviUv4STiT .carousel-inner.slides5 .cloneditem-2,
+  .cid-qviUv4STiT .carousel-inner.slides5 .cloneditem-3,
+  .cid-qviUv4STiT .carousel-inner.slides5 .cloneditem-4 {
+    display: block;
+  }
+  .cid-qviUv4STiT .carousel-inner.slides6 > .carousel-item.active.carousel-item-right,
+  .cid-qviUv4STiT .carousel-inner.slides6 > .carousel-item.carousel-item-next {
+    left: 0;
+    -webkit-transform: translate3d(16.666667%, 0, 0);
+    transform: translate3d(16.666667%, 0, 0);
+  }
+  .cid-qviUv4STiT .carousel-inner.slides6 > .carousel-item.active.carousel-item-left,
+  .cid-qviUv4STiT .carousel-inner.slides6 > .carousel-item.carousel-item-prev {
+    left: 0;
+    -webkit-transform: translate3d(-16.666667%, 0, 0);
+    transform: translate3d(-16.666667%, 0, 0);
+  }
+  .cid-qviUv4STiT .carousel-inner.slides6 > .carousel-item.carousel-item-left,
+  .cid-qviUv4STiT .carousel-inner.slides6 > .carousel-item.carousel-item-prev.carousel-item-right,
+  .cid-qviUv4STiT .carousel-inner.slides6 > .carousel-item.active {
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  .cid-qviUv4STiT .carousel-inner.slides6 .cloneditem-1,
+  .cid-qviUv4STiT .carousel-inner.slides6 .cloneditem-2,
+  .cid-qviUv4STiT .carousel-inner.slides6 .cloneditem-3,
+  .cid-qviUv4STiT .carousel-inner.slides6 .cloneditem-4,
+  .cid-qviUv4STiT .carousel-inner.slides6 .cloneditem-5 {
+    display: block;
+  }
+}
+.cid-qviUv4STiT H2 {
+  color: #ffffff;
+}
+.cid-qviUmAzHcT {
+  padding-top: 60px;
+  padding-bottom: 0px;
+  background-color: #55b4d4;
+}
+.cid-qviUmAzHcT .mbr-section-subtitle {
+  color: #ffffff;
+}
+.cid-qviUmAzHcT H2 {
+  color: #073b4c;
+}
+.cid-qviUnbxI4w {
+  padding-top: 60px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-qviUnbxI4w .line {
+  background-color: #55b4d4;
+  color: #55b4d4;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-qviUnbxI4w .section-text {
+  padding: 2rem 0;
+}
+.cid-qviUnbxI4w .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-qviUnbxI4w .inner-container {
+    width: 100% !important;
+  }
+}
+.cid-qviYo4yLn8 {
+  padding-top: 60px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-qviYo4yLn8 .mbr-section-subtitle {
+  color: #767676;
+  text-align: left;
+}
+.cid-qvj2s1HeQi {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-qvj2s1HeQi .mbr-slider .carousel-control {
+  background: #1b1b1b;
+}
+.cid-qvj2s1HeQi .mbr-slider .carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-qvj2s1HeQi .mbr-slider .carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-qvj2s1HeQi .mbr-slider .modal-body .close {
+  background: #1b1b1b;
+}
+.cid-qvj2s1HeQi .mbr-gallery-item > div::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to left, #554346, #45505b) !important;
+  opacity: 0;
+  -webkit-transition: 0.2s opacity ease-in-out;
+  transition: 0.2s opacity ease-in-out;
+}
+.cid-qvj2s1HeQi .mbr-gallery-title {
+  font-size: .9em;
+  position: absolute;
+  display: block;
+  width: 100%;
+  bottom: 0;
+  padding: 1rem;
+  color: #fff;
+  background: linear-gradient(to left, rgba(85, 67, 70, 0.85), rgba(69, 80, 91, 0.85)) !important;
+  -webkit-transition: 0.2s background ease-in-out;
+  transition: 0.2s background ease-in-out;
+}
+.cid-qviYBx4vxw {
+  padding-top: 15px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-qviYBx4vxw .line {
+  background-color: #55b4d4;
+  color: #55b4d4;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-qviYBx4vxw .section-text {
+  padding: 2rem 0;
+}
+.cid-qviYBx4vxw .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-qviYBx4vxw .inner-container {
+    width: 100% !important;
+  }
+}
+.cid-qviYsERIr9 {
+  padding-top: 60px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-qviYsERIr9 .mbr-section-subtitle {
+  color: #767676;
+  text-align: left;
+}
+.cid-qvj5jaFnnR {
+  padding-top: 0px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-qvj5jaFnnR .card-img a {
+  display: block;
+  padding-top: 2rem;
+}
+.cid-qvj5jaFnnR .card-box {
+  padding: 0 2rem;
+}
+.cid-qvj5jaFnnR .mbr-section-btn {
+  padding-top: 1rem;
+}
+.cid-qvj5jaFnnR .mbr-section-btn a {
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
+.cid-qvj5jaFnnR h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 2rem;
+}
+.cid-qvj5jaFnnR p {
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 1.5rem;
+}
+.cid-qvj5jaFnnR .mbr-text {
+  color: #767676;
+}
+.cid-qvj5jaFnnR .card-wrapper {
+  padding-bottom: 2rem;
+  background: #ffffff;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-qvj5jaFnnR .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
+}
+.cid-qvj7vo6Cld {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-qvj7vo6Cld .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-qvj1dds8U2 {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-qvj1dds8U2 .mbr-slider .carousel-control {
+  background: #1b1b1b;
+}
+.cid-qvj1dds8U2 .mbr-slider .carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-qvj1dds8U2 .mbr-slider .carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-qvj1dds8U2 .mbr-slider .modal-body .close {
+  background: #1b1b1b;
+}
+.cid-qvj1dds8U2 .mbr-gallery-item > div::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to left, #554346, #45505b) !important;
+  opacity: 0;
+  -webkit-transition: 0.2s opacity ease-in-out;
+  transition: 0.2s opacity ease-in-out;
+}
+.cid-qvj1dds8U2 .mbr-gallery-title {
+  font-size: .9em;
+  position: absolute;
+  display: block;
+  width: 100%;
+  bottom: 0;
+  padding: 1rem;
+  color: #fff;
+  background: linear-gradient(to left, rgba(85, 67, 70, 0.85), rgba(69, 80, 91, 0.85)) !important;
+  -webkit-transition: 0.2s background ease-in-out;
+  transition: 0.2s background ease-in-out;
+}
+.cid-qviY4StlkS {
+  background-color: #073b4c;
+}
+.cid-qviY4StlkS .mbr-icofont {
+  font-size: 48px;
+  color: #353535;
+}
+.cid-qviY4StlkS .show-modal span {
+  cursor: pointer;
+  background-color: #ffffff;
+  border-radius: 50%;
+  width: 6rem;
+  height: 6rem;
+  position: relative;
+  display: inline-block;
+  transition: all 0.25s;
+}
+.cid-qviY4StlkS .show-modal span:before {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+}
+.cid-qviY4StlkS .mbr-figure {
+  width: 100px;
+  height: 100px;
+  margin-bottom: 10px;
+  margin: auto;
+  transition: transform 1s;
+  cursor: pointer;
+}
+.cid-qviY4StlkS .mbr-figure a {
+  width: 100px;
+  height: 100px;
+  line-height: 100px;
+  font-size: 100px;
+}
+.cid-qviY4StlkS .mbr-figure a:before {
+  width: 100px;
+  height: 100px;
+}
+.cid-qviY4StlkS .mbr-figure:hover {
+  transform: scale(1.15);
+  transition: transform 1s;
+}
+.cid-qviY4StlkS .mbri-play:before {
+  left: 55% !important;
+}
+.cid-qviY4StlkS .form-inline {
+  justify-content: center;
+  -webkit-justify-content: center;
+}
+.cid-qviY4StlkS .form-inline .form-group {
+  padding: 0.5rem;
+}
+.cid-qviY4StlkS .form-inline input {
+  text-align: center;
+}
+.cid-qviY4StlkS h3 {
+  color: #ffffff;
+  text-align: center;
+  font-weight: 300;
+}
+.cid-qviY4StlkS .modalWindow {
+  position: fixed;
+  z-index: 5000;
+  display: none;
+  left: 0;
+  top: 0;
+  background-color: rgba(61, 61, 61, 0.65);
+  width: 100%;
+  height: 100%;
+}
+.cid-qviY4StlkS .modalWindow .modalWindow-container {
+  display: table-cell;
+  vertical-align: middle;
+  text-align: -o-center;
+}
+.cid-qviY4StlkS .modalWindow .modalWindow-container .modalWindow-video-container {
+  display: inline-block;
+  width: 100%;
+}
+.cid-qviY4StlkS .modalWindow .modalWindow-container .modalWindow-video-container .modalWindow-video {
+  margin: auto;
+}
+.cid-qviY4StlkS a.close {
+  position: absolute;
+  right: 4vw;
+  top: 4vh;
+  color: #ffffff;
+  z-index: 5000000;
+  font-size: 37px;
+  background: #000;
+  padding: 20px;
+  border-radius: 50%;
+}
+.cid-qviY4StlkS a.close:hover {
+  color: #ffffff;
+}
+@media (max-width: 500px) {
+  .cid-qviY4StlkS .modalWindow-video {
+    width: 80%;
+    height: 200px;
+    position: relative;
+  }
+}
+@media (min-width: 500px) and (max-width: 768px) {
+  .cid-qviY4StlkS .modalWindow-video {
+    width: 90%;
+    height: 340px;
+    position: relative;
+  }
+}
+@media (min-width: 768px) and (max-width: 850px) {
+  .cid-qviY4StlkS .modalWindow-video {
+    width: 700px;
+    height: 395px;
+    position: relative;
+  }
+}
+@media (min-width: 850px) and (max-width: 1300px) {
+  .cid-qviY4StlkS .modalWindow-video {
+    width: 800px;
+    height: 452px;
+    position: relative;
+  }
+}
+@media (min-width: 1300px) {
+  .cid-qviY4StlkS .modalWindow-video {
+    width: 1200px;
+    height: 675px;
+    position: relative;
+  }
+}
+.cid-qviY4ctrRA {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #2e2e2e;
+}
 .cid-qv7fPILlTH {
   padding-top: 75px;
   padding-bottom: 75px;
